--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     //Navigation Components
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha04'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha04'
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.0-alpha04"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -64,6 +63,7 @@ dependencies {
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:4.7.2"
 
     //Room
     implementation "androidx.room:room-runtime:2.4.2"
