code enhancement and refactoring add README file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,35 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
 
     //Navigation Components
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    // Dependencies for local unit tests
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //room-testing
+    androidTestImplementation("androidx.room:room-testing:2.4.3")
+
+    //Library for making assertions in Test Cases
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
+    // for making assertions in Test Cases
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation "com.google.truth:truth:1.1.3"
+
+    // for testing coroutines
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    // Android Testing Support Library's runner and rules
+    androidTestImplementation "com.android.support.test:runner:1.1.0"
+    androidTestImplementation "com.android.support.test:rules:1.1.0"
+
 
     //Dagger-Hilt Dependencies
     implementation 'com.google.dagger:hilt-android:2.42'
